<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsHeaderBloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/settingsUserPhoto"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="16dp"
            android:src="@drawable/default_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/settings_default_name"
            android:textColor="@color/white"
            android:textSize="@dimen/normalText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsUserPhoto"
            app:layout_constraintTop_toTopOf="@id/settingsUserPhoto" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="16dp"
            android:text="@string/settings_default_status"
            android:textColor="@color/white"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsUserPhoto"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settingsTextAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:text="@string/settings_text_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settingsHeaderBloc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsBTNPhoneNumber"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTextAccount">

        <TextView
            android:id="@+id/settingsPhoneNumberText"
            style="@style/normalText"
            android:text="@string/settings_default_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsBTNPhoneNumber" />

        <TextView
            android:id="@+id/settingsPhoneNumberLabel"
            style="@style/smallText"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsPhoneNumberText" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsPhoneNumberLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsBtNLogin"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsBTNPhoneNumber">

        <TextView
            android:id="@+id/settings_user_name"
            style="@style/normalText"
            android:text="@string/settings_default_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsBtNLogin" />

        <TextView
            android:id="@+id/settings_user_label"
            style="@style/smallText"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_user_name" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_user_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsBTNBIO"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsBtNLogin">

        <TextView
            android:id="@+id/settingsBIO"
            style="@style/normalText"
            android:text="@string/settings_default_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsBTNBIO" />

        <TextView
            android:id="@+id/settingsLoginBIO"
            style="@style/smallText"
            android:text="@string/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsBIO" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsLoginBIO" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingsChangePhoto"
        android:layout_width="@dimen/settings_btn_user_photo_width"
        android:layout_height="@dimen/settings_btn_user_photo_height"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/settingsHeaderBloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeaderBloc"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:civ_border_color="@color/gray"
        android:layout_marginRight="@dimen/horizontal_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>